<resources>
    <string name="app_name">Dakakeen</string>
    <string name="delete">Delete</string>
    <string name="login">Log In</string>
    <string name="register">Register</string>
    <string name="Continue">Continue</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="all_fields_required">All fields are required</string>
    <string name="Login_successful">Log In successful</string>
    <string name="provider">Provider</string>
    <string name="customer">Customer</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="name">Name</string>
    <string name="nationalID">National ID</string>
    <string name="submit">Submit</string>
    <string name="register_successful">Your account has been created successful</string>
    <string name="email_correct">The Email must be valid</string>
    <string name="title_activity_tabs">tabsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="orders">Orders</string>
    <string name="offers">Offers</string>
    <string name="settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_order">Create new order</string>
    <string name="order_title">Order Title</string>
    <string name="description">Description</string>
    <string name="category">Categories</string>


    <string-array name="categories">
        <item>None</item>
        <item>Food</item>
        <item>Hand Craft</item>
        <item>Fashion</item>
        <item>Accessory</item>
        <item>Painting</item>
    </string-array>


    <string-array name="settings">
        <!--<item>Edit profile</item>-->
        <item>Change password</item>
        <item>Log out</item>
    </string-array>

    <string-array name="orderState">
        <item>Active</item>
        <item>Accepted</item>
        <item>Delivered</item>
        <item>On route</item>
    </string-array>

    <string-array name="offerState">
        <item>Active</item>
        <item>Closed</item>
        <item>Accepted</item>
        <item>Delivered</item>
        <item>On route</item>
    </string-array>

    <string name="select_picture">Select Picture</string>
    <string name="edit">Edit</string>
    <string name="username_password_contain_space">Username and Password cannot contain spaces</string>
    <string name="number_incorrect">The entered number is incorrect</string>
    <string name="short_password">The password should be at least 6 characters long</string>
    <string name="price">Price</string>
    <string name="top_providers">Top Providers</string>
    <string name="order_success">Your order has been created successfully</string>
    <string name="offer_success">Your offer has been created successfully</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_order">Do you want to delete your order?</string>
    <string name="customers_orders">Customers Orders</string>
    <string name="my_offers">My Offers</string>
    <string name="create_offer">Create New Offer</string>
    <string name="order_state">Order state</string>
    <string name="no_connection">Cannot connect to the server</string>
    <string name="view_order_offers">View offers for this order</string>
    <string name="order_deleted">Your order has been deleted successfully</string>
    <string name="OldPassword">Old password</string>
    <string name="saudi_riyal">S.R</string>
    <string name="accept_offer">Accept Offer</string>
    <string name="holder_name">Card holder name</string>
    <string name="card_number">Credit card number</string>
    <string name="cvc_number">CVC number</string>
    <string name="expire_date">Expiration date</string>
    <string name="cvc_invalid">Invalid CVC number</string>
    <string name="expire_date_invalid">Invalid expiration date</string>
    <string name="card_number_invalid">Invalid card number</string>
    <string name="payment_success">Your transaction has been made successfully</string>
    <string name="offer_state">Offer state</string>
    <string name="average_rating">Average Rating</string>
    <string name="out_of">Out of 5</string>
    <string name="order_updated">Your order has been updated successfully</string>
    <string name="offer_updated">Your offer has been updated successfully</string>
    <string name="offer_deleted">Your offer has been deleted successfully</string>
    <string name="submit_delivery">Submit Offer for delivery</string>
    <string name="offer_submitted_delivery">Your offer has been submitted for delivery</string>
    <string name="offer">Offer</string>
    <string name="report_defect">Report Defect</string>
    <string name="request_refund">Request Refund</string>
    <string name="delivered">Delivered</string>
    <string name="onRoute">On route</string>
    <string name="accepted">Accepted</string>
    <string name="reason">Reason</string>
    <string name="submission_success">Your submission has been made successfully</string>
    <string name="already_rate">You have already rate this offer</string>
    <string name="review">Review</string>
    <string name="logout">Logout</string>
    <string name="logout_message">are you sure ?</string>
    <string name="logout_successful">Logout successful</string>
    <string name="new_password">New password</string>
    <string name="verify_password">Verify password</string>
    <string name="change_password">Change password</string>
    <string name="old_password_not_correct">Old password is not correct</string>
    <string name="new_and_verified_password_not_match">New and verified password does not match</string>
    <string name="password_changed_successfully">Password has been changed successfully</string>
    <string name="view_rating">View rating for this offer</string>
    <string name="no_rating">This is offer is not rated</string>
    <string name="delivery_id">Delivery ID</string>
    <string name="from_address">Delivered from</string>
    <string name="to_address">Delivered to</string>
    <string name="expected_date">Expected date</string>
    <string name="rate_offer">Rate Offer</string>
    <string name="check_connection">Please check your internet connection</string>
</resources>
