<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="dakakeen.dakakeen.Authentication.RegisterActivity"
    android:background="@color/creamy">

    <LinearLayout
        android:id="@+id/registerLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="invisible">

        <EditText
            android:id="@+id/registerUsernameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:textColor="@color/gray"
            android:textColorHint="@color/purple" />

        <EditText
            android:id="@+id/registerPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAlignment="viewStart"
            android:textColor="@color/gray"
            android:textColorHint="@color/purple" />

        <EditText
            android:id="@+id/registerEmailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/gray"
            android:textColorHint="@color/purple" />

        <EditText
            android:id="@+id/registerAddressEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:hint="@string/address"
            android:inputType="textPersonName"
            android:textColor="@color/gray"
            android:textColorHint="@color/purple" />

        <EditText
            android:id="@+id/registerNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:textColor="@color/gray"
            android:textColorHint="@color/purple"
            android:visibility="visible" />

        <EditText
            android:id="@+id/registerPhoneEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:hint="@string/phone"
            android:inputType="numberSigned"
            android:textColor="@color/gray"
            android:textColorHint="@color/purple"
            android:visibility="visible" />

        <EditText
            android:id="@+id/registerNationalIdEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:hint="@string/nationalID"
            android:inputType="numberSigned"
            android:textColor="@color/gray"
            android:textColorHint="@color/purple"
            android:visibility="invisible" />

        <Button
            android:id="@+id/registerSubmitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@color/purple"
            android:onClick="checkRegister"
            android:text="@string/register"
            android:textColor="@color/creamy" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/roleLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/registerRole"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/providerRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/gray"
                android:text="@string/provider"
                android:textColor="@color/light_red" />

            <RadioButton
                android:id="@+id/customerRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/gray"
                android:checked="true"
                android:text="@string/customer"
                android:textColor="@color/light_red" />
        </RadioGroup>

        <Button
            android:id="@+id/displayRegisterFormButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple"
            android:onClick="displayRegisterForm"
            android:text="@string/Continue"
            android:textColor="@color/creamy" />

    </LinearLayout>
</RelativeLayout>
