<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/creamy"
    tools:context="dakakeen.dakakeen.CustomerFunctions.ViewOfferDetails">

    <ImageView
        android:id="@+id/offerImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="32dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/acceptOfferButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/purple"
        android:onClick="directToPayment"
        android:text="@string/accept_offer"
        android:textColor="@color/creamy" />

    <Button
        android:id="@+id/submitForDeliveryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@color/purple"
        android:onClick="submitDelivery"
        android:text="@string/submit_delivery"
        android:textColor="@color/creamy"
        android:visibility="invisible" />

    <LinearLayout
        android:id="@+id/ActiveOfferLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:orientation="horizontal"
        android:visibility="invisible">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/gray"
            android:onClick="directToEditOffer"
            android:text="@string/edit"
            android:textColor="@color/creamy" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/purple"
            android:onClick="deleteOffer"
            android:text="@string/delete"
            android:textColor="@color/creamy" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:orientation="vertical"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:layout_below="@+id/offerImage"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="@color/purple"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/providerUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Provider Username"
            android:textColor="@color/gray"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textColor="@color/purple"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.72"
            android:text="Price"
            android:textColor="@color/gray"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textColor="@color/purple"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Description"
            android:textColor="@color/gray"
            android:textSize="18sp" />

    </LinearLayout>
</RelativeLayout>
