<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/creamy"
    tools:context="dakakeen.dakakeen.Deliveries.ViewDeliveryDetails">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delivery_id"
            android:textColor="@color/purple"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/deliveryID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delivery_id"
            android:textColor="@color/gray"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/from_address"
            android:textColor="@color/purple"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/fromAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/from_address"
            android:textColor="@color/gray"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/to_address"
            android:textColor="@color/purple"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/toAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/to_address"
            android:textColor="@color/gray"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/expected_date"
            android:textColor="@color/purple"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/expectedDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/expected_date"
            android:textColor="@color/gray"
            android:textSize="18sp" />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/purple"
        android:onClick="submitDelivery"
        android:text="@string/delivered"
        android:textColor="@color/creamy" />
</RelativeLayout>
