<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="8dp"
    android:background="@color/creamy"
    tools:context="dakakeen.dakakeen.ViewOrderDetails">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order_title"
            android:textColor="@color/purple"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/orderTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order_title"
            android:textColor="@color/gray" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textColor="@color/purple"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/orderDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textColor="@color/gray" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textColor="@color/purple"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/orderCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textColor="@color/gray" />

        <ImageView
            android:id="@+id/orderImageView"
            android:layout_width="86dp"
            android:layout_height="48dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/editOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/gray"
            android:onClick="directToEditOrder"
            android:text="@string/edit"
            android:textColor="@color/creamy" />

        <Button
            android:id="@+id/deleteOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/purple"
            android:onClick="deleteOrder"
            android:text="@string/delete"
            android:textColor="@color/creamy" />
    </LinearLayout>

</RelativeLayout>
