<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/creamy"
    tools:context="dakakeen.dakakeen.MyOrders.ViewClosedOrderDetails">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order_title"
            android:textColor="@color/purple"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/orderTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order_title"
            android:textColor="@color/gray" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textColor="@color/purple"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/orderDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textColor="@color/gray" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="15dp"
            android:text="@string/offer"
            android:textColor="@color/purple"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/offer_state"
            android:textColor="@color/purple"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/offerState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/offer_state"
            android:textColor="@color/gray" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textColor="@color/purple"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/offerPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textColor="@color/gray" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textColor="@color/purple"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/offerDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textColor="@color/gray" />

        <ImageView
            android:id="@+id/closedOrderDetails"
            android:layout_width="200dp"
            android:layout_height="200dp"

            android:layout_marginLeft="70dp"
             />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/deliveredOrderLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:onClick="DirectToReportDefect"
                android:text="@string/report_defect"
                android:textAlignment="center"
                android:textColor="@color/purple"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:onClick="DirectToRequestRefund"
                android:text="@string/request_refund"
                android:textAlignment="center"
                android:textColor="@color/purple"
                android:textSize="18sp" />
        </LinearLayout>

        <Button
            android:id="@+id/DirectToReportDefect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple"
            android:onClick="DirectToRateOffer"
            android:text="@string/report_defect"
            android:textColor="@color/creamy" />
    </LinearLayout>

</RelativeLayout>
