<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/creamy"
    tools:context="dakakeen.dakakeen.CustomerFunctions.MakePayment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:orientation="horizontal"
        android:id="@+id/linearLayout8">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/price"
            android:textColor="@color/purple"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/price"
            android:textColor="@color/gray"
            android:textSize="18sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/holderName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout8"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/holder_name"
        android:inputType="textPersonName"
        android:textColor="@color/gray"
        android:textColorHint="@color/purple" />

    <EditText
        android:id="@+id/cardNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/holderName"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/card_number"
        android:inputType="number"
        android:maxLength="16"
        android:textColor="@color/gray"
        android:textColorHint="@color/purple" />

    <EditText
        android:id="@+id/cvcNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardNumber"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/cvc_number"
        android:inputType="number"
        android:maxLength="3"
        android:textColor="@color/gray"
        android:textColorHint="@color/purple" />

    <TextView
        android:id="@+id/expireDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/linearLayout9"
        android:layout_below="@+id/cvcNumber"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="25dp"
        android:text="@string/expire_date"
        android:textColor="@color/purple"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/linearLayout9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/expireDate"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/eyear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="yy"
            android:inputType="number"
            android:maxLength="2"
            android:textColor="@color/gray"
            android:textColorHint="@color/purple" />

        <EditText
            android:id="@+id/emonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="mm"
            android:inputType="number"
            android:maxLength="2"
            android:textColor="@color/gray"
            android:textColorHint="@color/purple" />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/purple"
        android:onClick="makePayment"
        android:text="@string/submit"
        android:textColor="@color/creamy" />
</RelativeLayout>
